Update solar site

--- a/install/windows/index.html
+++ b/install/windows/index.html
@@ -563,19 +563,19 @@ window.cookieconsent.initialise({
 <tbody>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Natural Image Marker</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/NaturalImageMarker/releases/tag/PipelineNaturalImageMarker%2F0.7.0%2Fwin">download link</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/NaturalImageMarker/releases/download/NaturalImageMarker%2F0.7.0%2Fwin/SolAR_Natural_0_7_0.zip">download link</a></p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Fiducial Marker</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/FiducialMarker/releases/tag/PipelineFiducialMarker%2F0.7.0%2Fwin">download link</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/FiducialMarker/releases/download/FiducialMarker%2F0.7.0%2Fwin/SolAR_Fiducial_0_7_0.zip">download link</a></p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"> SLAM</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/Sample-Slam/releases/tag/SLAM%2F0.7.0%2Fwin">download link</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/Sample-Slam/releases/download/SLAM%2F0.7.0%2Fwin/SolAR_SLAM_0_7_0.zip">download link</a></p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Triangulation</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/Sample-Triangulation/releases/tag/Triangulation%2F0.7.0%2Fwin">download link</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/Sample-Triangulation/releases/download/Triangulation%2F0.7.0%2Fwin/SolAR_Triangulation_0_7_0.zip">download link</a></p></td>
 </tr>
 </tbody>
 </table>
