--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@ window.cookieconsent.initialise({
     <div class="videoblock col-md-8">
       <p>SolAR framework Overview</p>
       <div class="content">
-        <video src="homePage/videos/SolAROverview.webm" width="960px" controls="">
+        <video src="homePage/videos/SolAROverview_0_7_0.mp4" width="960px" controls="">
           Your browser does not support the video tag.
         </video>
       </div>
