--- a/install/windows/index.html
+++ b/install/windows/index.html
@@ -747,6 +747,18 @@ To download the dependencies in debug mode, run the following command:</p>
 <p>SolAR is made up of a multitude of projects (SolAR Framework, SolAR pipeline manager, modules, samples, etc.). To help you, we have created a parent repository with sub-modules regrouping all source codes of SolAR. You can clone it from the following url:
 <a href="https://github.com/SolarFramework/SolAR.git" class="bare">https://github.com/SolarFramework/SolAR.git</a></p>
 </div>
+<div class="admonitionblock warning">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-warning" title="Warning"></i>
+</td>
+<td class="content">
+No space in the path of the folder where you are cloning SolAR !
+</td>
+</tr>
+</table>
+</div>
 <div class="listingblock">
 <div class="content">
 <pre>git clone https://github.com/SolarFramework/SolAR.git</pre>
