Update solar site

--- a/index.html
+++ b/index.html
@@ -525,25 +525,12 @@ window.cookieconsent.initialise({
               <header>
   <div class="imageblock">
     <div class="content">
-      <img src="images/solar_banner.png" alt="solar banner" width="1400" />
+      <img src="images/solar_baniere.png" alt="solar banner" width="1400" />
     </div>
   </div>
 </header>
 <section class="row">
-<article class="col-md-12">
-    <h2>What's new in SolAR framework?</h2>
-    <p>v0.7.0 just released! </p>
-    <br />
-    <p>New features:
-      <div class="container">
-        <ul>
-          <li> A SLAM module is now available on SolAR Framework</li>
-          <li> New build pipeline, based on qmake</li>
-        </ul>
-      </div>
-    </p>
-  </article>
-  <article class="col-md-12">
+  <article class="col-md-6">
     <h2>What is SolAR?</h2>
     <p>SolAR is an open-source framework under Apache v2 licence dedicated to Augmented Reality. </p>
     <br />
@@ -559,6 +546,33 @@ window.cookieconsent.initialise({
       </div>
     </p>
   </article>
+  <article class="col-md-5 whatsnew">
+    <h2>What's new in SolAR framework?</h2>
+    <p>v0.7.0 just released! </p>
+    <br />
+    <p>New features:
+      <div class="container">
+        <ul>
+          <li> A SLAM module is now available on SolAR Framework</li>
+          <li> New build pipeline, based on qmake</li>
+        </ul>
+      </div>
+    </p>
+  </article>
+</section>
+<section>
+  <article>
+    <div class="videoblock col-md-8">
+      <h2>SolAR framework Overview</h2>
+      <div class="content">
+        <video src="homePage/videos/SolAROverview_0_7_0.mp4" width="960px" controls="">
+          Your browser does not support the video tag.
+        </video>
+      </div>
+    </div>
+  </article>
+</section>
+<section class="row"> 
   <article class="col-md-12">
     <h2>Who need SolAR?</h2>  
     <p>According to your needs, SolAR framework offers several user profiles:</p>
@@ -618,18 +632,6 @@ window.cookieconsent.initialise({
         <p>As an SolAR component developer, I can create customized bricks responding to specific needs...</p>
     </div>
     </a>
-  </article>
-</section>
-<section>
-  <article>
-    <div class="videoblock col-md-8">
-      <p>SolAR framework Overview</p>
-      <div class="content">
-        <video src="homePage/videos/SolAROverview_0_7_0.mp4" width="960px" controls="">
-          Your browser does not support the video tag.
-        </video>
-      </div>
-    </div>
   </article>
 </section>
 <section class="row"> 
