Update solar site

--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@ window.cookieconsent.initialise({
     <p>New features:
       <div class="container">
         <ul>
-          <li> A SLAM module is now available on SolAR Framework</li>
+          <li> A SLAM pipeline is now available on SolAR Framework</li>
           <li> New build pipeline, based on qmake</li>
         </ul>
       </div>
