--- a/install/installClone/index.html
+++ b/install/installClone/index.html
@@ -544,7 +544,7 @@ git submodule update --init --recursive</pre>
 </div>
 </div>
 <div class="paragraph">
-<p>If you want to move all submodules on Master, laucnh the folloing command</p>
+<p>If you want to move all submodules on Master, launch the following command</p>
 </div>
 <div class="listingblock">
 <div class="content">
