Update solar site

--- a/assemble/standalone_c_plus_plus/index.html
+++ b/assemble/standalone_c_plus_plus/index.html
@@ -744,7 +744,7 @@ include ($${REMAKEN_RULES_ROOT}/remaken_install_target.pri) <i class="conum" dat
 </div>
 <div class="listingblock">
 <div class="content">
-<pre>SolARFramework|0.7.0|SolARFramework|github|https://github.com/SolarFramework/SolarFramework/releases/download</pre>
+<pre>SolARFramework|0.7.0|SolARFramework|SolARBuild@github|https://github.com/SolarFramework/SolarFramework/releases/download</pre>
 </div>
 </div>
 <div class="paragraph">
@@ -752,7 +752,7 @@ include ($${REMAKEN_RULES_ROOT}/remaken_install_target.pri) <i class="conum" dat
 </div>
 <div class="listingblock">
 <div class="content">
-<pre>framework#channel | version | [condition]#library name | identifier@repository_type | repository_url | link_mode | options</pre>
+<pre>framework#channel | version | [condition]#library name | identifier or local folder@repository_type | repository_url | link_mode | options</pre>
 </div>
 </div>
 <div class="paragraph">
