--- a/install/linux/index.html
+++ b/install/linux/index.html
@@ -644,16 +644,16 @@ You don&#8217;t need to install <em>Qt</em> SDK, just the <em>Qt Creator</em>. S
 <p>Open a terminal and install curl, git, build-essential, pkg-config and cmake package: <code>sudo apt-get install curl git build-essential pkg-config cmake -y</code></p>
 </li>
 <li>
-<p>If <em>Homebrew</em> is not installed on your machine, you can use the following script to install it: <a href="https://raw.githubusercontent.com/b-com-software-basis/remaken/blob/master/scripts/install_brew.sh">Homebrew installer</a>. Homebrew is used to install the last release of <em>Remaken</em>.</p>
+<p>If <em>Homebrew</em> is not installed on your machine, you can use the following script to install it: <a href="https://raw.githubusercontent.com/b-com-software-basis/remaken/master/scripts/install_brew.sh">Homebrew installer</a>. Homebrew is used to install the last release of <em>Remaken</em>.</p>
 </li>
 <li>
 <p>Log out and then log in to add brew eval modification to your ${HOME}/.profile</p>
 </li>
 <li>
-<p>Use the following script to install and configure <em>Remaken</em>: <a href="https://raw.githubusercontent.com/b-com-software-basis/remaken/blob/master/scripts/install.sh">Remaken installer</a>. By default, <em>Remaken</em> installer will also install <em>Conan</em> which will be used afterwards. Try <code>remaken --help</code>, <code>conan -h</code>, and <code>cmake -h</code> commands in a terminal to check installation.</p>
+<p>Use the following script to install and configure <em>Remaken</em>: <a href="https://raw.githubusercontent.com/b-com-software-basis/remaken/master/scripts/install.sh">Remaken installer</a>. By default, <em>Remaken</em> installer will also install <em>Conan</em> which will be used afterwards. Try <code>remaken --help</code>, <code>conan -h</code>, and <code>cmake -h</code> commands in a terminal to check installation.</p>
 </li>
 <li>
-<p>Create <em>Qmake building rules</em> in your ${HOME}./remaken/rules folder by running the folloing command:</p>
+<p>Create <em>Qmake building rules</em> in your ${HOME}./remaken/rules folder by running the following command:</p>
 </li>
 </ul>
 </div>
