--- a/use/cplusplus/index.html
+++ b/use/cplusplus/index.html
@@ -717,9 +717,9 @@ include ($$shell_quote($$shell_path($$(REMAKEN_RULES_ROOT)/qmake/remaken_install
 <div class="listingblock">
 <div class="title">packagedependecies.txt</div>
 <div class="content">
-<pre>SolARFramework|0.7.0|SolARFramework|github|https://github.com/SolarFramework/SolarFramework/releases/download
+<pre>SolARFramework|0.7.0|SolARFramework|SolARBuild@github|https://github.com/SolarFramework/SolarFramework/releases/download
 <i class="conum" data-value="1"></i><b>(1)</b>
-OtherDependency|version x.x.x|OtherDependency|Where|urlToIt</pre>
+OtherDependency|version x.x.x|OtherDependency|LocalFolder@WhereDistant|urlToIt</pre>
 </div>
 </div>
 <div class="colist arabic">
