--- a/assemble/unity_pipeline/index.html
+++ b/assemble/unity_pipeline/index.html
@@ -715,7 +715,7 @@ include ($${REMAKEN_RULES_ROOT}/remaken_install_target.pri) <i class="conum" dat
 </div>
 <div class="listingblock">
 <div class="content">
-<pre>SolARFramework|0.7.0|SolARFramework|github|https://github.com/SolarFramework/SolarFramework/releases/download</pre>
+<pre>SolARFramework|0.7.0|SolARFramework|SolARBuild@github|https://github.com/SolarFramework/SolarFramework/releases/download</pre>
 </div>
 </div>
 <div class="paragraph">
@@ -723,7 +723,7 @@ include ($${REMAKEN_RULES_ROOT}/remaken_install_target.pri) <i class="conum" dat
 </div>
 <div class="listingblock">
 <div class="content">
-<pre>framework#channel | version | [condition]#library name | identifier@repository_type | repository_url | link_mode | options</pre>
+<pre>framework#channel | version | [condition]#library name | identifier or local folder@repository_type | repository_url | link_mode | options</pre>
 </div>
 </div>
 <div class="paragraph">
