Update solar site

--- a/assemble/get_modules/index.html
+++ b/assemble/get_modules/index.html
@@ -289,6 +289,17 @@ window.cookieconsent.initialise({
 		</li>
 	
 
+	
+	
+
+		<li >
+			<a href="/install/android/">
+				For Android
+				
+			</a>
+		</li>
+	
+
 
       </ul>
       <div class="submenuHelper">&gt;</div>
@@ -564,33 +575,45 @@ window.cookieconsent.initialise({
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARFramework/releases" class="bare">https://github.com/SolarFramework/SolARFramework/releases</a></p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top" rowspan="7"><p class="tableblock">Modules</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">SolARModuleOpenCV</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARModuleOpenCV/releases" class="bare">https://github.com/SolarFramework/SolARModuleOpenCV/releases</a></p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">SolARModuleNonFreeOpenCV</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARModuleNonFreeOpenCV/releases" class="bare">https://github.com/SolarFramework/SolARModuleNonFreeOpenCV/releases</a></p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">SolARModuleTools</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARModuleTools/releases" class="bare">https://github.com/SolarFramework/SolARModuleTools/releases</a></p></td>
+<td class="tableblock halign-left valign-top" rowspan="10"><p class="tableblock">Modules</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">SolARModuleCeres</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARModuleCeres/releases" class="bare">https://github.com/SolarFramework/SolARModuleCeres/releases</a></p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">SolARModuleFBOW</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARModuleFBOW/releases" class="bare">https://github.com/SolarFramework/SolARModuleFBOW/releases</a></p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">SolARModuleOpenGV</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARModuleOpenGV/releases" class="bare">https://github.com/SolarFramework/SolARModuleOpenGV/releases</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">SolARModuleG2O</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARModuleG2O/releases" class="bare">https://github.com/SolarFramework/SolARModuleG2O/releases</a></p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">SolARModuleCeres</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARModuleCeres/releases" class="bare">https://github.com/SolarFramework/SolARModuleCeres/releases</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">SolARModuleNonFreeOpenCV</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARModuleNonFreeOpenCV/releases" class="bare">https://github.com/SolarFramework/SolARModuleNonFreeOpenCV/releases</a></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">SolARModuleOpenCV</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARModuleOpenCV/releases" class="bare">https://github.com/SolarFramework/SolARModuleOpenCV/releases</a></p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">SolARModuleOpenGL</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARModuleOpenGL/releases" class="bare">https://github.com/SolarFramework/SolARModuleOpenGL/releases</a></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">SolARModuleOpenGV</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARModuleOpenGV/releases" class="bare">https://github.com/SolarFramework/SolARModuleOpenGV/releases</a></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">SolARModulePCL</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARModulePCL/releases" class="bare">https://github.com/SolarFramework/SolARModulePCL/releases</a></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">SolARModuleRealSense</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARModuleRealSense/releases" class="bare">https://github.com/SolarFramework/SolARModuleRealSense/releases</a></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">SolARModuleTools</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARModuleTools/releases" class="bare">https://github.com/SolarFramework/SolARModuleTools/releases</a></p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top" rowspan="4"><p class="tableblock">Samples</p></td>
