--- a/assemble/standalone_c_plus_plus/index.html
+++ b/assemble/standalone_c_plus_plus/index.html
@@ -289,6 +289,17 @@ window.cookieconsent.initialise({
 		</li>
 	
 
+	
+	
+
+		<li >
+			<a href="/install/android/">
+				For Android
+				
+			</a>
+		</li>
+	
+
 
       </ul>
       <div class="submenuHelper">&gt;</div>
@@ -642,35 +653,48 @@ Start by uploading the QTcreator wizards for XPCF available on the following lin
 <div class="title">MyStandalonePipeline.pro</div>
 <div class="content">
 <pre class="CodeRay highlight"><code>QT       -= core gui
-CONFIG -= app_bundle qt
+CONFIG -= qt
 
 TARGET = MyStandalonePipeline
-VERSION=1.0.0 <i class="conum" data-value="1"></i><b>(1)</b>
-DEFINES +=  $${TARGET}VERSION=\"$${VERSION}\"
-
+VERSION=X.X.X <i class="conum" data-value="1"></i><b>(1)</b>
+DEFINES += MYVERSION=$${VERSION}
 CONFIG += c++1z
 CONFIG += console
 
 include(findremakenrules.pri) <i class="conum" data-value="2"></i><b>(2)</b>
 
-CONFIG += shared
+CONFIG(debug,debug|release) {
+    TARGETDEPLOYDIR = $${PWD}/../bin/Debug
+    DEFINES += _DEBUG=1
+    DEFINES += DEBUG=1
+}
 
-DEPENDENCIESCONFIG = sharedlib
-DEPENDENCIESCONFIG += install_recurse <i class="conum" data-value="3"></i><b>(3)</b>
+CONFIG(release,debug|release) {
+    TARGETDEPLOYDIR = $${PWD}/../bin/Release
+    DEFINES += _NDEBUG=1
+    DEFINES += NDEBUG=1
+}
+
+win32:CONFIG -= static
+win32:CONFIG += shared
+
+DEPENDENCIESCONFIG = sharedlib install_recurse <i class="conum" data-value="3"></i><b>(3)</b>
 
 ## Configuration for Visual Studio to install binaries and dependencies. Work also for QT Creator by replacing QMAKE_INSTALL
 PROJECTCONFIG = QTVS <i class="conum" data-value="4"></i><b>(4)</b>
 
-#NOTE : CONFIG as staticlib or sharedlib, DEPENDENCIESCONFIG as staticlib or sharedlib and PROJECTDEPLOYDIR MUST BE DEFINED BEFORE templatelibbundle.pri inclusion
-include ($${REMAKEN_RULES_ROOT}/templateappconfig.pri)
+#NOTE : CONFIG as staticlib or sharedlib, DEPENDENCIESCONFIG as staticlib or sharedlib, QMAKE_TARGET.arch and PROJECTDEPLOYDIR MUST BE DEFINED BEFORE templatelibconfig.pri inclusion
+include ($$shell_quote($$shell_path($${QMAKE_REMAKEN_RULES_ROOT}/templateappconfig.pri)))  # Shell_quote &amp; shell_path required for visual on windows
 
 #DEFINES += BOOST_ALL_NO_LIB
 DEFINES += BOOST_ALL_DYN_LINK
 DEFINES += BOOST_AUTO_LINK_NOMANGLE
 DEFINES += BOOST_LOG_DYN_LINK
 
-HEADERS +=
-SOURCES +=     MyStandalonePipeline_main.cpp
+HEADERS += \
+
+SOURCES += \
+MyStandalonePipeline_main.cpp
 
 unix {
     LIBS += -ldl
@@ -693,14 +717,16 @@ win32 {
     INCLUDEPATH += $$(WINDOWSSDKDIR)lib/winv6.3/um/x64
  }
 
-INCLUDEPATH += $${PWD}
+config_files.path = $${TARGETDEPLOYDIR}
+config_files.files=$$files($${PWD}/conf_MyPipeline.xml)\
+					$$files($${PWD}/camera_calibration.yml)
+INSTALLS += config_files
 
-DISTFILES +=     Makefile
-
-OTHER_FILES +=     packagedependencies.txt
+OTHER_FILES += \
+    packagedependencies.txt
 
 #NOTE : Must be placed at the end of the .pro
-include ($${REMAKEN_RULES_ROOT}/remaken_install_target.pri) <i class="conum" data-value="5"></i><b>(5)</b></code></pre>
+include ($$shell_quote($$shell_path($${QMAKE_REMAKEN_RULES_ROOT}/remaken_install_target.pri)))) #&lt;5&gt; # Shell_quote &amp; shell_path required for visual on windows</code></pre>
 </div>
 </div>
 <div class="colist arabic">
@@ -728,7 +754,7 @@ include ($${REMAKEN_RULES_ROOT}/remaken_install_target.pri) <i class="conum" dat
 </table>
 </div>
 <div class="paragraph">
-<p>Finally, click on <code><em>Projects</em></code> in the left menu of QTcreator, click on <em>Run</em>, set your working directory to the root directory of your project, and check <em>Add build library search path to LD_LIBRARY_PATH</em> if not already done.</p>
+<p>Finally, click on <code><em>Projects</em></code> in the left menu of QTcreator, click on <em>Run</em>, set your working directory to the root directory of your project, and check <em>Add build library search path to PATH</em> if not already done.</p>
 </div>
 </div>
 <div class="sect2">
@@ -744,7 +770,7 @@ include ($${REMAKEN_RULES_ROOT}/remaken_install_target.pri) <i class="conum" dat
 </div>
 <div class="listingblock">
 <div class="content">
-<pre>SolARFramework|0.7.0|SolARFramework|SolARBuild@github|https://github.com/SolarFramework/SolarFramework/releases/download</pre>
+<pre>SolARFramework|0.8.0|SolARFramework|SolARBuild@github|https://github.com/SolarFramework/SolarFramework/releases/download</pre>
 </div>
 </div>
 <div class="paragraph">
@@ -835,7 +861,7 @@ Once you have identified the modules and the components required to assemble you
 <pre class="CodeRay highlight"><code data-lang="xml"><span class="preprocessor">&lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot; standalone=&quot;yes&quot; ?&gt;</span>
 <span class="tag">&lt;xpcf-registry</span> <span class="attribute-name">autoAlias</span>=<span class="string"><span class="delimiter">&quot;</span><span class="content">true</span><span class="delimiter">&quot;</span></span><span class="tag">&gt;</span>
 
-<span class="tag">&lt;module</span> <span class="attribute-name">uuid</span>=<span class="string"><span class="delimiter">&quot;</span><span class="content">15e1990b-86b2-445c-8194-0cbe80ede970</span><span class="delimiter">&quot;</span></span> <span class="attribute-name">name</span>=<span class="string"><span class="delimiter">&quot;</span><span class="content">SolARModuleOpenCV</span><span class="delimiter">&quot;</span></span> <span class="attribute-name">path</span>=<span class="string"><span class="delimiter">&quot;</span><span class="content">$REMAKEN_PKG_ROOT/packages/SolARBuild/win-cl-14.1/SolARModuleOpenCV/0.7.0/lib/x86_64/shared</span><span class="delimiter">&quot;</span></span> <span class="attribute-name">description</span>=<span class="string"><span class="delimiter">&quot;</span><span class="content">OpenCV</span><span class="delimiter">&quot;</span></span><span class="tag">&gt;</span> <i class="conum" data-value="1"></i><b>(1)</b>
+<span class="tag">&lt;module</span> <span class="attribute-name">uuid</span>=<span class="string"><span class="delimiter">&quot;</span><span class="content">15e1990b-86b2-445c-8194-0cbe80ede970</span><span class="delimiter">&quot;</span></span> <span class="attribute-name">name</span>=<span class="string"><span class="delimiter">&quot;</span><span class="content">SolARModuleOpenCV</span><span class="delimiter">&quot;</span></span> <span class="attribute-name">path</span>=<span class="string"><span class="delimiter">&quot;</span><span class="content">$REMAKEN_PKG_ROOT/packages/SolARBuild/win-cl-14.1/SolARModuleOpenCV/0.8.0/lib/x86_64/shared</span><span class="delimiter">&quot;</span></span> <span class="attribute-name">description</span>=<span class="string"><span class="delimiter">&quot;</span><span class="content">OpenCV</span><span class="delimiter">&quot;</span></span><span class="tag">&gt;</span> <i class="conum" data-value="1"></i><b>(1)</b>
   <span class="tag">&lt;component</span> <span class="attribute-name">uuid</span>=<span class="string"><span class="delimiter">&quot;</span><span class="content">5B7396F4-A804-4F3C-A0EB-FB1D56042BB4</span><span class="delimiter">&quot;</span></span> <span class="attribute-name">name</span>=<span class="string"><span class="delimiter">&quot;</span><span class="content">SolARCameraOpencv</span><span class="delimiter">&quot;</span></span> <span class="attribute-name">description</span>=<span class="string"><span class="delimiter">&quot;</span><span class="content">SolARCameraOpencv</span><span class="delimiter">&quot;</span></span><span class="tag">&gt;</span> <i class="conum" data-value="2"></i><b>(2)</b>
     <span class="tag">&lt;interface</span> <span class="attribute-name">uuid</span>=<span class="string"><span class="delimiter">&quot;</span><span class="content">125f2007-1bf9-421d-9367-fbdc1210d006</span><span class="delimiter">&quot;</span></span> <span class="attribute-name">name</span>=<span class="string"><span class="delimiter">&quot;</span><span class="content">IComponentIntrospect</span><span class="delimiter">&quot;</span></span> <span class="attribute-name">description</span>=<span class="string"><span class="delimiter">&quot;</span><span class="content">IComponentIntrospect</span><span class="delimiter">&quot;</span></span><span class="tag">/&gt;</span>
     <span class="tag">&lt;interface</span> <span class="attribute-name">uuid</span>=<span class="string"><span class="delimiter">&quot;</span><span class="content">5DDC7DF0-8377-437F-9C81-3643F7676A5B</span><span class="delimiter">&quot;</span></span> <span class="attribute-name">name</span>=<span class="string"><span class="delimiter">&quot;</span><span class="content">ICamera</span><span class="delimiter">&quot;</span></span> <span class="attribute-name">description</span>=<span class="string"><span class="delimiter">&quot;</span><span class="content">ICamera</span><span class="delimiter">&quot;</span></span><span class="tag">/&gt;</span>
