--- a/install/linux/index.html
+++ b/install/linux/index.html
@@ -289,6 +289,17 @@ window.cookieconsent.initialise({
 		</li>
 	
 
+	
+	
+
+		<li >
+			<a href="/install/android/">
+				For Android
+				
+			</a>
+		</li>
+	
+
 
       </ul>
       <div class="submenuHelper">&gt;</div>
@@ -516,9 +527,9 @@ window.cookieconsent.initialise({
 <ul class="sectlevel1">
 <li><a href="#install_on_linux">Install On Linux</a></li>
 <li><a href="#test_solar">Test SolAR</a></li>
-<li><a href="#install_development_environment">Install development environment</a>
+<li><a href="#InstalDevEnv">Install development environment</a>
 <ul class="sectlevel2">
-<li><a href="#install_your_ide">Install your IDE</a></li>
+<li><a href="#install_qt_creator_ide">Install QT Creator IDE</a></li>
 <li><a href="#install_dependencies">Install dependencies</a></li>
 </ul>
 </li>
@@ -526,6 +537,11 @@ window.cookieconsent.initialise({
 <ul class="sectlevel2">
 <li><a href="#clone_solar">Clone SolAR</a></li>
 <li><a href="#build_on_qt_creator">Build on Qt Creator</a></li>
+</ul>
+</li>
+<li><a href="#q_a">Q&amp;A</a>
+<ul class="sectlevel2">
+<li><a href="#remaken_does_not_work">Remaken does not work</a></li>
 </ul>
 </li>
 </ul>
@@ -540,7 +556,7 @@ window.cookieconsent.initialise({
 <h2 id="test_solar"><a class="anchor" href="#test_solar"></a><a class="link" href="#test_solar">Test SolAR</a></h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>We provide you a bundle to test our samples code. It&#8217;s just a .zip file including SolAR&#8217;s .so and executable binaries.</p>
+<p>We provide you with a set of samples to test the possibilities of the SolAR framework. Each .zip file corresponds to stand-alone applications, including all necessary SolAR .dll and .exe files.</p>
 </div>
 <table class="tableblock frame-all grid-all spread">
 <caption class="title">Table 1. Available Samples</caption>
@@ -574,7 +590,7 @@ window.cookieconsent.initialise({
 <i class="fa icon-important" title="Important"></i>
 </td>
 <td class="content">
-Print the marker included in .zip file to use it during the test.
+Print the marker included in .zip file to perform the test.
 </td>
 </tr>
 </table>
@@ -582,21 +598,19 @@ Print the marker included in .zip file to use it during the test.
 </div>
 </div>
 <div class="sect1">
-<h2 id="install_development_environment"><a class="anchor" href="#install_development_environment"></a><a class="link" href="#install_development_environment">Install development environment</a></h2>
+<h2 id="InstalDevEnv"><a class="anchor" href="#InstalDevEnv"></a><a class="link" href="#InstalDevEnv">Install development environment</a></h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>The SolAR framework uses a dedicated pipeline for linking and compiling code as well as internal tools for third party downloads that should make your job a lot easier.
+<p>The SolAR framework uses a dedicated pipeline to link and compile code as well as internal tools for third party downloads which should make your job much easier.
 As you will see later, the SolAR framework is based on <em>QMake</em> originally created by the Qt Company, but compliant with most IDE.</p>
 </div>
 <div class="sect2">
-<h3 id="install_your_ide"><a class="anchor" href="#install_your_ide"></a><a class="link" href="#install_your_ide">Install your IDE</a></h3>
-<div class="sect3">
-<h4 id="qt_creator"><a class="anchor" href="#qt_creator"></a><a class="link" href="#qt_creator">QT Creator</a></h4>
+<h3 id="install_qt_creator_ide"><a class="anchor" href="#install_qt_creator_ide"></a><a class="link" href="#install_qt_creator_ide">Install QT Creator IDE</a></h3>
 <div class="paragraph">
-<p>As SolAR is using QMake file to setup the projects, we highly recomment to install <em>Qt Creator</em>. Moreover, you will have access to wizards which will help you create new SolAR modules, components and pipelines.</p>
+<p>As SolAR is using QMake file to setup the projects, we highly recommend to install <em>Qt Creator</em>. Moreover, you will have access to wizards which will help you create new SolAR modules, components and pipelines.</p>
 </div>
 <div class="paragraph">
-<p>Download the latest version of QTCreator on the following link:
+<p>Download the latest version of QTCreator on the following link (scroll down to choose "Downloads for open-source users" for open-source development):
 <a href="https://www.qt.io/download">QT installer download</a></p>
 </div>
 <div class="paragraph">
@@ -613,7 +627,7 @@ You don&#8217;t need to install <em>Qt</em> SDK, just the <em>Qt Creator</em>. S
 <div class="ulist">
 <ul>
 <li>
-<p>With Desktop gcc 64-bit</p>
+<p>With Desktop gcc 64-bit (version of gcc is 7.5)</p>
 </li>
 <li>
 <p>Android (if you want to build SolAR for Android)</p>
@@ -630,70 +644,129 @@ You don&#8217;t need to install <em>Qt</em> SDK, just the <em>Qt Creator</em>. S
 <p>and start the installation.</p>
 </div>
 </div>
-</div>
 <div class="sect2">
 <h3 id="install_dependencies"><a class="anchor" href="#install_dependencies"></a><a class="link" href="#install_dependencies">Install dependencies</a></h3>
 <div class="paragraph">
-<p>For downloading dependencies, the SolAR framework uses the meta dependencies management tool <a href="https://github.com/b-com-software-basis/remaken">Remaken</a> supporting <a href="https://conan.io/">Conan</a>, <a href="https://github.com/microsoft/vcpkg">VCPKG</a> and its native C++ packaging structure based on <a href="https://www.freedesktop.org/wiki/Software/pkg-config/">pkg-config</a> description files.</p>
+<p>To download dependencies, the SolAR framework uses the meta dependencies management tool <a href="https://github.com/b-com-software-basis/remaken">Remaken</a> supporting <a href="https://conan.io/">Conan</a>, <a href="https://github.com/microsoft/vcpkg">VCPKG</a> and its native C++ packaging structure based on <a href="https://www.freedesktop.org/wiki/Software/pkg-config/">pkg-config</a> description files.</p>
 </div>
 <div class="sect3">
-<h4 id="install_remaken"><a class="anchor" href="#install_remaken"></a><a class="link" href="#install_remaken">Install Remaken</a></h4>
+<h4 id="InstallRemaken"><a class="anchor" href="#InstallRemaken"></a><a class="link" href="#InstallRemaken">Install Remaken</a></h4>
 <div class="ulist">
 <ul>
-<li>
-<p>Open a terminal and install curl, git, build-essential, pkg-config and cmake package: <code>sudo apt-get install curl git build-essential pkg-config cmake -y</code></p>
-</li>
 <li>
 <p>If <em>Homebrew</em> is not installed on your machine, you can use the following script to install it: <a href="https://raw.githubusercontent.com/b-com-software-basis/remaken/master/scripts/install_brew.sh">Homebrew installer</a>. Homebrew is used to install the last release of <em>Remaken</em>.</p>
 </li>
 <li>
-<p>Log out and then log in to add brew eval modification to your ${HOME}/.profile</p>
+<p><code>source ~/.profile</code> to update brew eval modification to your ${HOME}/.profile. Try <code>brew --version</code> commands in terminal to check installation</p>
 </li>
 <li>
-<p>Use the following script to install and configure <em>Remaken</em>: <a href="https://raw.githubusercontent.com/b-com-software-basis/remaken/master/scripts/install.sh">Remaken installer</a>. By default, <em>Remaken</em> installer will also install <em>Conan</em> which will be used afterwards. Try <code>remaken --help</code>, <code>conan -h</code>, and <code>cmake -h</code> commands in a terminal to check installation.</p>
+<p>Use the following script to install and configure <em>Remaken</em>: <a href="https://raw.githubusercontent.com/b-com-software-basis/remaken/master/scripts/install.sh">Remaken installer</a>. By default, <em>Remaken</em> installer will also install <em>Conan</em>, <em>cmake</em> and <em>pkg_config</em> which will be used afterwards. Try <code>remaken --help</code>, <code>conan -h</code>, and <code>cmake -h</code> commands in a terminal to check installation. This script will also add conan-community and bincrafters conan remotes. Conan will check these remotes for searching your dependencies.</p>
 </li>
 <li>
-<p>Create <em>Qmake building rules</em> in your ${HOME}./remaken/rules folder by running the following command:</p>
+<p>SolAR has its own conan remote to store pre-built dependencies for the common configurations used by the SolAR Framework. You will need to add this conan remote with the following command in a command prompt:</p>
 </li>
 </ul>
 </div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
-<pre>remaken init</pre>
+<pre>conan remote add conan-solar https://artifact.b-com.com/api/conan/solar-conan-local</pre>
 </div>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Then, open a command prompt <strong>with administrator rights</strong> and run:</p>
+</li>
+</ul>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre>remaken init --tag latest</pre>
+</div>
+</div>
+<div class="paragraph">
+<p>This command will install the latest version of qmake building rules in your ${USER_HOME}/.remaken/rules folder.</p>
+</div>
+<div class="paragraph">
+<p>Finally, you need to configure your remaken profile according to your development environment. To do so, run the following command in a command prompt:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre>remaken profile init --cpp-std 17 -b gcc -o linux -a x86_64</pre>
+</div>
+</div>
+</div>
+<div class="sect3">
+<h4 id="set_conan_profile"><a class="anchor" href="#set_conan_profile"></a><a class="link" href="#set_conan_profile">Set conan profile</a></h4>
+<div class="paragraph">
+<p>As we are using conan to download dependencies, you need to configure your default conan profile. To do so, open the default file available in your ${HOME}/.conan/profiles, and replace the configuration by the following one before saving it:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre>[settings]
+os=Linux
+os_build=Linux
+arch=x86_64
+arch_build=x86_64
+compiler=gcc
+compiler.version=7
+compiler.libcxx=libstdc++11
+compiler.cppstd=17
+build_type=Release
+[options]
+[build_requires]
+[env]</pre>
+</div>
+</div>
+<div class="paragraph">
+<p>Now, you are ready to download your dependencies with remaken.</p>
 </div>
 </div>
 <div class="sect3">
 <h4 id="use_remaken"><a class="anchor" href="#use_remaken"></a><a class="link" href="#use_remaken">Use Remaken</a></h4>
 <div class="paragraph">
-<p>Remaken uses a file called <em>packagedependencies.txt</em> to describe which depedencies to install, in which version, where to install them, and where to download them.<br></p>
+<p>Remaken uses a file called <em>packagedependencies.txt</em> to describe which depedencies to install, in which version, where to install them, where to download them, with which package manager and with which configuration.<br></p>
 </div>
 <div class="paragraph">
-<p>A global <em>packagedepedencies.txt</em> is available in the  parent GIT repository <em>SolAR</em>, and can be downloaded on the following link:
-<a href="https://raw.githubusercontent.com/SolarFramework/SolAR/master/packagedependencies.txt">packagedependencies.txt</a></p>
+<p>A global <em>packagedepedencies.txt</em> defining the common dependencies with specific <em>packagedependencies_os.txt</em> files defining dependencies which are specific for each os are available in the parent GIT repository <em>SolAR</em>, and can be downloaded on the following link:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://raw.githubusercontent.com/SolarFramework/SolAR/master/packagedependencies.txt">packagedependencies.txt</a></p>
+</li>
+<li>
+<p><a href="https://raw.githubusercontent.com/SolarFramework/SolAR/master/packagedependencies-linux.txt">packagedependencies-linux.txt</a></p>
+</li>
+<li>
+<p><a href="https://raw.githubusercontent.com/SolarFramework/SolAR/master/packagedependencies-android.txt">packagedependencies-android.txt</a> (optionnal, required for android cross building)</p>
+</li>
+</ul>
 </div>
 <div class="paragraph">
-<p>Copy this file where you want on your computer, open a terminal in the folder where you have copied the <em>packagedependencies.txt</em> file, and run remaken with the following command:</p>
+<p>Copy these files where you want on your computer, open a command prompt in the folder where you have copied the <em>packagedependencies.txt</em> and <em>packagedependencies_os.txt</em> files, and run remaken with the following command:</p>
 </div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
-<pre>remaken install --cpp-std 17 -b gcc packagedependencies.txt</pre>
+<pre>remaken install packagedependencies.txt</pre>
 </div>
 </div>
 <div class="paragraph">
-<p>This command will install all SolAR dependencies in release mode in your <em>${HOME}/.remaken/packages</em> folder.
-To download the dependencies in debug mode, run the following command:</p>
+<p>This command will install all SolAR dependencies in release mode in your <em>${HOME}/.remaken/packages</em> folder. You can go and have a cup of coffee while it&#8217;s downloading.</p>
 </div>
-<div class="literalblock">
+<div class="paragraph">
+<p>To download the dependencies in debug mode, run the following command:</p>
+</div>
+<div class="listingblock">
 <div class="content">
-<pre>remaken install --cpp-std 17 -b gcc -c debug packagedependencies.txt</pre>
+<pre>remaken install -c debug packagedependencies.txt</pre>
 </div>
 </div>
 <div class="paragraph">
 <p>This is done, all your dependencies are downloaded and ready to use !</p>
 </div>
 <div class="paragraph">
-<p>Some of the module will download and build third parties using Conan which requires CMake (minimum version 3.10)</p>
+<p>Some of the module will download and build third parties using Conan which requires CMake (minimum version 3.10).</p>
 </div>
 </div>
 </div>
@@ -705,7 +778,7 @@ To download the dependencies in debug mode, run the following command:</p>
 <div class="sect2">
 <h3 id="clone_solar"><a class="anchor" href="#clone_solar"></a><a class="link" href="#clone_solar">Clone SolAR</a></h3>
 <div class="paragraph">
-<p>SolAR is made up of a multitude of projects (SolAR Framework, SolAR pipeline manager, modules, samples, etc.). To help you, we have created a parent repository with sub-modules regrouping all source codes of SolAR. You can clone it from the following url:
+<p>SolAR is made up of a multitude of projects (SolAR Framework, SolAR pipeline manager, modules, samples, etc.). To help you, we have created a parent repository with sub-modules regrouping all source codes of SolAR projects. You can clone it from the following url:
 <a href="https://github.com/SolarFramework/SolAR.git" class="bare">https://github.com/SolarFramework/SolAR.git</a></p>
 </div>
 <div class="admonitionblock warning">
@@ -759,7 +832,7 @@ Check by clicking on the <code><em>Projects</em></code> tab, and then on the <co
 <i class="fa icon-warning" title="Warning"></i>
 </td>
 <td class="content">
-In your project build settings of your kit, for each configuration (release and debug), add argument <code>install_deps</code> to the <em>Builds Steps &gt; Make</em> step of your kit to copy compiled module output and its dependencies in <em>${HOME}/.remaken/packages</em> (recommended for any SolAR module and applications such as samples and tests). If you just want to copy the compiled project without its dependencies, replace the make argument <code>install_deps</code> by <code>install</code> (recommended for the SolAR framework, the pipeline manager, the wrapper and any SolAR pipeline).
+In your project build settings of your kit, for each configuration (release and debug), add argument <code>install_deps</code> to the <em>Builds Steps &gt; Make</em> step of your kit to copy the built module output and its dependencies in <em>${HOME}/.remaken/packages</em> (recommended for any SolAR module and applications such as samples and tests). If you just want to copy the built project without its dependencies, replace the make argument <code>install_deps</code> by <code>install</code> (recommended for the SolAR framework, the pipeline manager, the wrapper and any SolAR pipeline).
 </td>
 </tr>
 </table>
@@ -772,6 +845,33 @@ In your project build settings of your kit, for each configuration (release and 
 </div>
 <div class="paragraph">
 <p>Just run qmake, and build your project.</p>
+</div>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="q_a"><a class="anchor" href="#q_a"></a><a class="link" href="#q_a">Q&amp;A</a></h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="remaken_does_not_work"><a class="anchor" href="#remaken_does_not_work"></a><a class="link" href="#remaken_does_not_work">Remaken does not work</a></h3>
+<div class="paragraph">
+<p>Be sure to install, init and use Remaken from a command prompt with admin rights.
+You can check that <em>cmake</em>, <em>pkg-config</em> and conan are well installed with the following command:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre>cmake -version</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre>pkg-config --version</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre>conan -v</pre>
+</div>
 </div>
 </div>
 </div>
