--- a/api_documentation/class_sol_a_r_1_1datastructure_1_1_image_1_1_image_internal.html
+++ b/api_documentation/class_sol_a_r_1_1datastructure_1_1_image_1_1_image_internal.html
@@ -75,6 +75,9 @@ $(function() {
 <div class="title">SolAR::datastructure::Image::ImageInternal Class Reference</div>  </div>
 </div><!--header-->
 <div class="contents">
+
+<p><b>A 2D image buffer.</b>.  
+ <a href="class_sol_a_r_1_1datastructure_1_1_image_1_1_image_internal.html#details">More...</a></p>
 <table class="memberdecls">
 <tr class="heading"><td colspan="2"><h2 class="groupheader"><a name="pub-methods"></a>
 Public Member Functions</h2></td></tr>
@@ -100,7 +103,9 @@ void *&#160;</td><td class="memItemRight" valign="bottom"><b>data</b> ()</td></t
 const void *&#160;</td><td class="memItemRight" valign="bottom"><b>data</b> () const</td></tr>
 <tr class="separator:a1f88e029ae553c3bc451cc62102bd9be"><td class="memSeparator" colspan="2">&#160;</td></tr>
 </table>
-<hr/>The documentation for this class was generated from the following file:<ul>
+<a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
+<div class="textblock"><p><b>A 2D image buffer.</b>. </p>
+</div><hr/>The documentation for this class was generated from the following file:<ul>
 <li>src/datastructure/Image.cpp</li>
 </ul>
 </div><!-- contents -->
